src/components/Hero/Livestream/index.module.scss
@use "@scss/common" as *;

.livestreamHero {
  position: relative;
  margin-top: calc(var(--base) * -2);
  color: var(--color-base-0);

  @include mid-break {
    margin-top: calc(var(--base) * -1);
  }
}

.gutter {
  position: relative;
  padding-top: calc(var(--base) * 8);
  padding-bottom: calc(var(--base) * 8);

  @include mid-break {
    padding-top: calc(var(--base) * 4);
    padding-bottom: calc(var(--base) * 4);
  }
}

.linkCell,
.videoCell {
  padding: calc(var(--base) * 4) 0;

  &>*:not(:last-child) {
    margin-bottom: var(--base);
  }

  @include mid-break {
    margin-top: var(--base);
    padding: 0;
  }
}

.linksWrap,
.videoWrap {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
}

.videoWrap {
  width: calc(100% + (calc(var(--gutter-h)*0.75)));

  @include extra-large-break {
    width: calc(100% + (calc(var(--gutter-h)*1)));
  }

  @include mid-break {
    width: 100%;
  }
}

.link {
  &:not(:last-child) {
    margin-bottom: var(--base);
  }

  &--secondary {
    color: var(--color-success-400);
    border-color: var(--color-success-400);
  }

  &--default {
    color: var(--color-blue-600);
    width: min-content;

    & div {
      width: unset;
    }

    @include mid-break {
      padding: 0;
    }
  }
}

.guestWrap {
  @include label;
  display: flex;
  flex-direction: row;
  align-items: center;
  text-decoration: none;

  & img {
    width: 45px;
    height: 45px;
    border-radius: 100%;
    overflow: hidden;
    margin-right: calc(var(--base) * 1.5);
    border: none;
    flex-shrink: 0;
  }

  &:not(:last-child) {
    margin-bottom: var(--base);
  }
}


// BG

.bgWrapper {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.bgGutter {
  width: 100%;
  height: 100%;
}

.bg1 {
  position: relative;
  width: 100%;
  height: 100%;
  background-color: var(--color-base-950);
  margin-left: calc(var(--gutter-h) / -2);
  width: calc(100% + var(--gutter-h));

  @include mid-break {
    margin: 0;
    width: 100%;
  }
}

.pixelBG {
  position: absolute;
  height: 100%;
  width: calc(var(--base) * 16);
  right: 0;
  left: auto;

  @include mid-break {
    width: calc(var(--base) * 10);
  }
}

.bg2Wrapper {
  width: 100%;
  height: calc(100% - (var(--base) * 16));
  top: calc(var(--base) * 8);
  position: absolute;
  left: 0;

  @include mid-break {
    opacity: 0;
  }
}

.bg2Grid {
  position: relative;
  width: 100%;
  height: 100%;
}

.bg2Cell {
  position: relative;
  width: 100%;
  height: 100%;
}

.bg2 {
  position: absolute;
  left: 0;
  top: 0;
  width: calc(100% + var(--gutter-h));
  height: 100%;
  background-color: var(--color-base-900);
}

